test/errors/parser/syntax_times_1.ms
a = *1
// Syntax Error (Line 1, Column 6): Expecting either a terminal or a starting parentheses, instead got token TOKEN_STAR.
